# N2

./: .gitignore  README.md  pyproject.toml  skills-lock.json
2026S1_STIL_conceptDrift/: main.tex  main.xdv  (+1 more)
2026S1_STIL_conceptDrift (1)/: main.tex
google_trends_serp_test/: BATCH_RESULTS.md  pyproject.toml
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/altissimo/normalized/: breakdown_by_region.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/alvo/normalized/: interest_over_time.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/bloqueio/normalized/: breakdown_by_region.csv  interest_over_time.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/complicado/normalized/: breakdown_by_region.csv  related_queries.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/contradicao/normalized/: breakdown_by_region.csv  interest_over_time.csv  related_queries.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/corrupcao/normalized/: breakdown_by_region.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/crise/normalized/: breakdown_by_region.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/critico/normalized/: breakdown_by_region.csv
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/destaque/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/direito/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/expresso/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/intervencao/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/preco/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/real/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/recurso/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/renovacao/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/salario/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/sincero/: summary.json
google_trends_serp_test/outputs/batch_20260406T020524Z/terms/trabalhador/: summary.json
google_trends_serp_test/outputs/smoke_20260406T015746Z_democracia/: summary.json
google_trends_serp_test/scripts/: run_smoke_test.py
google_trends_serp_test/src/google_trends_serp_test/: client.py
(+522 files in other folders)
