[project]
name = "google-trends-serp-test"
version = "0.1.0"
description = "Isolated smoke test for the Oxylabs Google Trends scraping method."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
]

[dependency-groups]
dev = [
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_trends_serp_test"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
